--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.type=org.springframework.jdbc.datasource.DriverManagerDataSource
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.jdbcUrl=jdbc:postgresql://db-aules.uji.es:5432/${DB}
-spring.datasource.username=${USER}
-spring.datasource.password=${PASS}
+source.type=org.springframework.jdbc.datasource.DriverManagerDataSource
+source.driver-class-name=org.postgresql.Driver
+source.jdbcUrl=jdbc:postgresql://db-aules.uji.es:5432/${DB}
+source.username=${USER}
+source.password=${PASS}
