--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 source.type=org.springframework.jdbc.datasource.DriverManagerDataSource
 source.driver-class-name=org.postgresql.Driver
 source.jdbcUrl=jdbc:postgresql://db-aules.uji.es:5432/${DB}
